# yaxp

./: .gitignore  README.md  pyproject.toml  releases.md  setup.cfg
.github/workflows/: release.yml
src/yaxp/: __init__.py  _xpath.py
tests/: test_xpath.py
