[project]
name = "yaxp"
version = "0.1.0"
description="yet another xpath generator"
authors = [
    { name="Claudio Klingler", email="ck@realtime-projects.com"}
]
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [ "requests" ]

[build-system]
requires = [
  "setuptools >= 61.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"


[project.urls]
"Homepage" = "https://github.com/realtimeprojects/yaxp"
"Bug Tracker" = "https://github.com/realtimeprojects/yaxp/issues"
"Documentation" = "https://realtimeprojects.github.io/yaxp"

[package]
include = ["templates/*.html"]
