[metadata]
name = yaxp
version = 0.2.1
description = intuitive xpath generator
keywords = xpath, selenium, xml
long_description = file: README.md
long_description_content_type = text/markdown

project_urls =
    Homepage = https://github.com/realtimeprojects/yaxp
    Bug Tracker = https://github.com/realtimeprojects/yaxp/issues

[options.packages.find]
where=src

[options]
package_dir=
    =src
packages = yaxp
include_package_data = True
install_requires =

[wheel]
universal=1
